--- a/map.html
+++ b/map.html
@@ -8,14 +8,14 @@
 
 <body>
 <h1>Map of Stanford</h1>
-<div id='mapViewer'>
-    <img id="s"  class='map' src="./img/map-s.gif" 
+<div id='mapViewer' >
+    <img id="s"  class='map' src="./img/map-s.gif" alt="icon" 
     style="visibility:hidden;">
-    <img id="m" class='map' src="./img/map-m.gif" 
+    <img id="m" class='map' src="./img/map-m.gif" alt="icon"
     style="visibility:hidden;"> 
-    <img id="l" class='map' src="./img/map-l.gif" 
+    <img id="l" class='map' src="./img/map-l.gif" alt="icon"
     style="visibility:hidden;">
-    <img id="xl" class='map' src="./img/map-xl.gif">
+    <img id="xl" class='map' alt="icon" src="./img/map-xl.gif">
 </div>
 
 <!--nav icons by Denis Mikhutin form https://www.iconfinder.com/icons-->
